--- a/templates/page.sidebar.liquid
+++ b/templates/page.sidebar.liquid
@@ -72,8 +72,8 @@
     <div class="sidebar-map">
     
     </div>
-    <div class="">
-    
+    <div class="sidebar-section-block direction-block">
+          
     </div>
   </div>
   
