--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -6,6 +6,7 @@
 	5. Vendor Detailed Page
 	0.1 Banner Section
 	6. Application Page
+  7. About US Page
 */
 
 /* Global Setting */
@@ -1190,5 +1191,33 @@ a{
     width: 100%;
     display: inline-block;
     text-align: center;
+  }
+}
+
+/* 7. About US Page */
+.about_image{
+  display: flex;
+}
+.about_image img{
+  margin-right: 40px;
+}
+.page-about .page_content div{
+  padding-bottom: 4rem;
+}
+@media screen and (max-width: 767px){
+  .about_image{
+    display: block;
+  }
+  .about_image img{
+    width: 100%;
+    margin-bottom: 40px;
+    margin-right: 0;
+  }
+  .page-about .page_content div{
+    padding-bottom: 2rem;
+  }
+  .about_image_two{
+    height: 340px;
+    object-fit: cover;
   }
 }
