--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -77,6 +77,7 @@
 
   <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
   <link rel="stylesheet" href="{{ 'custom.css' | asset_url }}" type="text/css">
+  <link rel="stylesheet" href="{{ 'custom-y.css' | asset_url }}" type="text/css">
 
   <style>
     {{ header_font | font_face: font_display: 'swap' }}
