--- a/sections/page-sidebar-questions.liquid
+++ b/sections/page-sidebar-questions.liquid
@@ -1,7 +1,7 @@
 {% include 'page-sidebar-number', section: section %}
 
 <div class="question_buttons">
-  <a class="vendor_setup">Vontinue to vendor setup</a>
+  <a class="vendor_setup">Continue to vendor setup</a>
   <a class="apply_person">Apply to the in-person fair</a>
 </div>
 
