--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -166,14 +166,16 @@
 
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+
   {{ content_for_header }}
 
 <!--begin-boost-pfs-filter-css-->
   {% render 'boost-pfs-style' %}
 <!--end-boost-pfs-filter-css-->
 
+  {{ 'api.jquery.js' | shopify_asset_url | script_tag }}
+  <script>Shopify.money_format = "{{ shop.money_format }}";</script>
 
 </head>
 
