--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -207,6 +207,12 @@
     <li id="a11y-selection-message">{{ 'general.accessibility.selection_help' | t }}</li>
   </ul>
 
+  {% unless template.name == 'customer' %}
+    <!--begin-sign in/up popup-->
+    {% include 'sign-in-popup' %}
+    <!--end-sign in/up popup-->
+  {% endunless %}
+
 <!--begin-boost-pfs-js-->
   {% render 'boost-pfs' %}
 <!--end-boost-pfs-js-->
