--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -8,7 +8,7 @@
 
       <div id="CustomerLoginForm" class="form-vertical">
 
-        <h1 id="LoginHeading" class="text-center">{{ 'customer.login.title' | t }}</h1>
+        <h1 id="LoginHeading" class="text-left">{{ 'customer.login.title' | t }}</h1>
 
         {% form 'customer_login', novalidate: 'novalidate' %}
 
@@ -47,15 +47,24 @@
             >
           {% endif %}
 
-          <div class="text-center">
-            {% if form.password_needed %}
-              <p><a href="#recover" id="RecoverPassword">{{ 'customer.login.forgot_password' | t }}</a></p>
-            {% endif %}
+          <div class="text-left">
+            <div class="login-bottom">
+              <p class="login-stay text-left">
+                <input type="checkbox" id="stay_signed" name="Stay signed in" value="Stay signed in">
+                <label for="stay_signed">{{ 'customer.login.stay_signed_in' | t }}</label>
+              </p>
+              {% if form.password_needed %}
+                <p class="login-forgot text-right">
+                  <a href="#recover" id="RecoverPassword">{{ 'customer.login.forgot_password' | t }}</a>
+                </p>
+              {% endif %}
+            </div>
+            
 
-            <input type="submit" class="btn" value="{{ 'customer.login.sign_in' | t }}">
+            <input type="submit" class="btn btn-fullwidth" value="{{ 'customer.login.sign_in' | t }}">
 
-            <p>
-              {{ 'layout.customer.create_account' | t | customer_register_link }}
+            <p class="text-left">
+              {{ 'layout.customer.dont_have_account' | t }} {{ 'layout.customer.create_account' | t | customer_register_link }}
             </p>
           </div>
 
@@ -64,12 +73,12 @@
 
       <div id="RecoverPasswordForm" class="hide">
 
-        <div class="text-center">
+        <div class="text-left">
           <h2 id="RecoverHeading">{{ 'customer.recover_password.title' | t }}</h2>
-          <p>{{ 'customer.recover_password.subtext' | t }}</p>
+          <p class="text-recover">{{ 'customer.recover_password.subtext' | t }}</p>
         </div>
 
-        <div class="form-vertical">
+        <div class="form-vertical text-left">
           {% form 'recover_customer_password' %}
 
             {% comment %}
@@ -103,7 +112,7 @@
 
             <div class="text-center">
               <p>
-                <input type="submit" class="btn" value="{{ 'customer.recover_password.submit' | t }}">
+                <input type="submit" class="btn btn-fullwidth" value="{{ 'customer.recover_password.submit' | t }}">
               </p>
 
               <a href="#LoginHeading" id="HideRecoverPasswordLink">{{ 'customer.recover_password.cancel' | t }}</a>
@@ -123,7 +132,7 @@
           <h2>{{ 'customer.login.guest_title' | t }}</h2>
 
           {% form 'guest_login' %}
-            <input type="submit" class="btn" value="{{ 'customer.login.guest_continue' | t }}">
+            <input type="submit" class="btn btn-fullwidth" value="{{ 'customer.login.guest_continue' | t }}">
           {% endform %}
         </div>
       {% endif %}
