--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -17,14 +17,14 @@
 *:focus {
     outline: none;
 }
-.page-width{
-	max-width: 1390px;
-}
-.template-page .main-content{
-	padding-top: 0;
-}
 a{
   cursor: pointer;
+}
+.page-width{
+  max-width: 1390px;
+}
+.template-page .main-content{
+  padding-top: 0;
 }
 @media screen and (max-width: 749px){
   .grid{
@@ -1650,5 +1650,135 @@ a{
   }
   .review-footer img:last-child{
     margin-right: 0;
+  }
+}
+
+/* 12. Contact Page */
+.page-contact{
+  padding-top: 70px;
+}
+.page-contact-wrapper{
+  display: flex;
+}
+.contact-banner h1{
+  color: #3B3A40;
+}
+.contact-banner p{
+  color: #3B3A40;
+}
+.contact-sidebar{
+    max-width: 400px;
+    position: relative;
+    width: 100%;
+    top: 0;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 2px rgb(0 0 0 / 18%);
+    border-radius: 5px;
+    padding: 32px;
+}
+.contact-sidebar-block{
+    padding-left: 32px;
+    position: relative;
+    margin-bottom: 16px;
+}
+.contact-sidebar-block img{
+    position: absolute;
+    left: 0;
+    width: 18px;
+    top: 5px; 
+}
+.contact-sidebar-block p{
+    font-size: 16px;
+    line-height: 24px;
+    color: #3B3A40;
+    margin-bottom: 0;
+}
+.contact-sidebar-block p.direction_button{
+    margin-top: 8px;
+    color: #67893C;  
+    position: relative;
+    display: inline-block;
+}
+.contact-sidebar-block p.direction_button a{
+    width: 18px;
+    height: 18px;
+    display: inline-flex;
+    justify-content: center;
+    background: #67893C;
+    color: white;
+    border-radius: 50%;
+    position: absolute;
+    right: -26px;
+    top: 5px;
+}
+.contact-sidebar-heading h2{
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: 400;
+    color: #3B3A40;
+    margin-bottom: 2rem;  
+}
+.social-block{
+  padding-top: 16px;
+}
+.contact-form{
+    max-width: 800px;
+    margin-right: 0;
+    margin-left: auto;
+}
+.contact-form label{
+    font-size: 12px;
+    line-height: 16px;
+    color: #64626A;
+    margin-bottom: 8px;
+}
+.contact-form input::placeholder,
+.contact-form textarea::placeholder{
+    font-size: 16px;
+    line-height: 24px;
+    color: #B0AFB6;
+    font-family: 'sofia-pro';
+}
+.contact-form input::-webkit-input-placeholder,
+.contact-form textarea::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    font-size: 16px;
+    line-height: 24px;
+    color: #B0AFB6;
+    font-family: 'sofia-pro';
+}
+.contact-form input::-moz-placeholder,
+.contact-form textarea::-moz-placeholder { /* Firefox 19+ */
+    font-size: 16px;
+    line-height: 24px;
+    color: #B0AFB6;
+    font-family: 'sofia-pro';
+}
+.contact-form input:-ms-input-placeholder,
+.contact-form textarea:-ms-input-placeholder { /* IE 10+ */
+    font-size: 16px;
+    line-height: 24px;
+    color: #B0AFB6;
+    font-family: 'sofia-pro';
+}
+.contact-form input:-moz-placeholder,
+.contact-form textarea:-moz-placeholder { /* Firefox 18- */
+    font-size: 16px;
+    line-height: 24px;
+    color: #B0AFB6;
+    font-family: 'sofia-pro';
+}
+.contact-form [type="submit"]{
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+    background: #67893C;
+    border-radius: 5px;  
+}
+@media screen and (max-width: 767px){
+  .page-contact-wrapper{
+    flex-direction: column-reverse;
+  }
+  .contact-form [type="submit"]{
+    width: 100%;
   }
 }
